645 - Migrate the Test Automation Tool to CodeLite Added an -f option to a rm command that was failing.

--- a/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
@@ -186,7 +186,7 @@
         <Command Enabled="yes">rsync -a --exclude='.*' $(EXECUTION_PATH)../../../../bin/artifacts/artifacts $(EXECUTION_PATH)../../../../bin/GCC/$(ConfigurationName)</Command>
       </PreBuild>
       <PostBuild>
-        <Command Enabled="yes">rm *.so</Command>
+        <Command Enabled="yes">rm -f *.so</Command>
       </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
@@ -319,7 +319,7 @@
         <Command Enabled="yes">rsync -a --exclude='.*' $(EXECUTION_PATH)../../../../bin/artifacts/artifacts $(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)</Command>
       </PreBuild>
       <PostBuild>
-        <Command Enabled="yes">rm *.dylib</Command>
+        <Command Enabled="yes">rm -f *.dylib</Command>
       </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
