--- a/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
@@ -229,7 +229,7 @@
         <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/NormalizationTest.txt" "$(EXECUTION_PATH)../../../../bin/GCC/$(ConfigurationName)"</Command>
       </PreBuild>
       <PostBuild>
-        <Command Enabled="yes">rm *.so</Command>
+        <Command Enabled="yes">rm -f *.so</Command>
       </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
@@ -345,7 +345,7 @@
         <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/NormalizationTest.txt" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
       </PreBuild>
       <PostBuild>
-        <Command Enabled="yes">rm *.dylib</Command>
+        <Command Enabled="yes">rm -f *.dylib</Command>
       </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
