593 - QFileStream Done. Added the EQFileOpenMode enumeration. QMemoryStream::Copy method improved. Some minor fixes applied to other classes (variable renaming, documentation...). The SQThisThread class has been used in SQFile and SQDirectory tests, removing some TODOs.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -133,6 +133,10 @@
       <File Name="../../../../headers/EQFileSystemError.h"/>
       <File Name="../../../../headers/SQDirectory.h"/>
       <File Name="../../../../source/SQDirectory.cpp"/>
+      <File Name="../../../../headers/EQFileOpenMode.h"/>
+      <File Name="../../../../headers/QFileStream.h"/>
+      <File Name="../../../../source/EQFileOpenMode.cpp"/>
+      <File Name="../../../../source/QFileStream.cpp"/>
     </VirtualDirectory>
     <File Name="../../../../headers/QBinaryStreamWriter.h"/>
     <File Name="../../../../headers/EQNewLineCharacters.h"/>
