564 - SQThisThread 001 Done. It's pending to test it on Linux and Mac. Added the EQThreadPriority enumeration.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -162,6 +162,8 @@
     <File Name="../../../../source/QThread.cpp"/>
     <File Name="../../../../headers/SQThisThread.h"/>
     <File Name="../../../../source/SQThisThread.cpp"/>
+    <File Name="../../../../headers/EQThreadPriority.h"/>
+    <File Name="../../../../source/EQThreadPriority.cpp"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
