561 - QThread 001 Done. It's pending to test it on Linux and Mac.

--- a/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj.filters
@@ -183,5 +183,8 @@
     <ClCompile Include="..\..\..\..\source\EQThreadPriority.cpp">
       <Filter>Threading</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\source\EQThreadPriority.cpp">
+      <Filter>Threading</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
