--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -156,6 +156,10 @@
     <File Name="../../../../source/QCallTrace.cpp"/>
     <File Name="../../../../headers/QCallStackTrace.h"/>
     <File Name="../../../../source/QCallStackTrace.cpp"/>
+    <File Name="../../../../headers/IQCallStackTraceFormatter.h"/>
+    <File Name="../../../../headers/QCallStackTracePlainTextFormatter.h"/>
+    <File Name="../../../../source/IQCallStackTraceFormatter.cpp"/>
+    <File Name="../../../../source/QCallStackTracePlainTextFormatter.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Threading">
     <File Name="../../../../headers/QThread.h"/>
