565 - QMutex Done. A minor fixed applied to QThread.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -168,6 +168,8 @@
     <File Name="../../../../source/SQThisThread.cpp"/>
     <File Name="../../../../headers/EQThreadPriority.h"/>
     <File Name="../../../../source/EQThreadPriority.cpp"/>
+    <File Name="../../../../headers/QMutex.h"/>
+    <File Name="../../../../source/QMutex.cpp"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
